src/snapshots/ruff__linter__tests__e742.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousClassName: l
  location:
    row: 1
    column: 1
  fix: ~
- kind:
    AmbiguousClassName: I
  location:
    row: 5
    column: 1
  fix: ~
- kind:
    AmbiguousClassName: O
  location:
    row: 9
    column: 1
  fix: ~

