src/snapshots/ruff__linter__tests__e743.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousFunctionName: l
  location:
    row: 1
    column: 1
  fix: ~
- kind:
    AmbiguousFunctionName: I
  location:
    row: 5
    column: 1
  fix: ~
- kind:
    AmbiguousFunctionName: O
  location:
    row: 10
    column: 5
  fix: ~

