src/snapshots/ruff__linter__tests__e999.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    SyntaxError: Got unexpected EOF
  location:
    row: 2
    column: 1
  fix: ~

