src/snapshots/ruff__linter__tests__f401_0.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedImport:
      - functools
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 21
  fix:
    content: import os
    location:
      row: 2
      column: 1
    end_location:
      row: 2
      column: 21
    applied: false
- kind:
    UnusedImport:
      - collections.OrderedDict
  location:
    row: 4
    column: 1
  end_location:
    row: 8
    column: 2
  fix:
    content: "from collections import (\n    Counter,\n    namedtuple,\n)"
    location:
      row: 4
      column: 1
    end_location:
      row: 8
      column: 2
    applied: false
- kind:
    UnusedImport:
      - logging.handlers
  location:
    row: 12
    column: 1
  end_location:
    row: 12
    column: 24
  fix:
    content: import logging.handlers
    location:
      row: 12
      column: 1
    end_location:
      row: 12
      column: 24
    applied: false
- kind:
    UnusedImport:
      - shelve
  location:
    row: 33
    column: 5
  end_location:
    row: 33
    column: 18
  fix:
    content: ""
    location:
      row: 33
      column: 1
    end_location:
      row: 34
      column: 1
    applied: false
- kind:
    UnusedImport:
      - importlib
  location:
    row: 34
    column: 5
  end_location:
    row: 34
    column: 21
  fix:
    content: ""
    location:
      row: 34
      column: 1
    end_location:
      row: 35
      column: 1
    applied: false
- kind:
    UnusedImport:
      - pathlib
  location:
    row: 38
    column: 5
  end_location:
    row: 38
    column: 19
  fix:
    content: ""
    location:
      row: 38
      column: 1
    end_location:
      row: 39
      column: 1
    applied: false
- kind:
    UnusedImport:
      - pickle
  location:
    row: 53
    column: 9
  end_location:
    row: 53
    column: 22
  fix:
    content: pass
    location:
      row: 53
      column: 9
    end_location:
      row: 53
      column: 22
    applied: false

