src/snapshots/ruff__linter__tests__f403.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarUsage: F634
  location:
    row: 1
    column: 1
  fix: ~
- kind:
    ImportStarUsage: F634
  location:
    row: 2
    column: 1
  fix: ~

