src/snapshots/ruff__linter__tests__f404.snap
---
source: src/linter.rs
expression: checks
---
- kind: LateFutureImport
  location:
    row: 7
    column: 1
  fix: ~

