src/snapshots/ruff__linter__tests__f405.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarUsed:
      - name
      - mymodule
  location:
    row: 5
    column: 11
  fix: ~
- kind:
    ImportStarUsed:
      - a
      - mymodule
  location:
    row: 11
    column: 1
  fix: ~

