src/snapshots/ruff__linter__tests__f406.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarNotPermitted: F634
  location:
    row: 5
    column: 5
  fix: ~
- kind:
    ImportStarNotPermitted: F634
  location:
    row: 9
    column: 5
  fix: ~

