src/snapshots/ruff__linter__tests__f407.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    FutureFeatureNotDefined: non_existent_feature
  location:
    row: 2
    column: 1
  fix: ~

