src/snapshots/ruff__linter__tests__f541.snap
---
source: src/linter.rs
expression: checks
---
- kind: FStringMissingPlaceholders
  location:
    row: 4
    column: 7
  fix: ~
- kind: FStringMissingPlaceholders
  location:
    row: 5
    column: 7
  fix: ~
- kind: FStringMissingPlaceholders
  location:
    row: 7
    column: 7
  fix: ~

